--- a/templates/pair.html
+++ b/templates/pair.html
@@ -8,8 +8,12 @@ so you don't have to do this again.
 </p>
 {% endif %}
 <p class="alert alert-info" role="alert">
-When you're ready, have someone push the button on
-the TCP Connected Hub.
+When you're ready, push the button with two circular
+arrows on the TCP Connected Hub.
+After you do this, the lights around the button will
+start rotating.
+<br />
+<br />
 Then press the pair button below.
 </p>
 <p>
