--- a/templates/success.html
+++ b/templates/success.html
@@ -5,6 +5,9 @@
 Success!
 Your TCP Connected Hub has been paired with
 this computer.
+<br />
+<br />
+<b>Press the sync button one more time to stop the lights rotating</b>
 </p>
 <ul>
     <li>
