--- a/templates/devices.html
+++ b/templates/devices.html
@@ -15,7 +15,7 @@ Select a Hub to configure below.
 <ul>
 {% for d in devices %}
     <li>
-        <a href="mac/{{ d.mac }}">{{ d.name }}</a>
+        <a href="{{ html_root }}/mac/{{ d.mac }}">{{ d.name }}</a>
         {% if d.is_configured %}
             &mdash; <b>configured</b>
         {% else %}
