--- a/templates/error.html
+++ b/templates/error.html
@@ -11,7 +11,7 @@
     </li>
     {% endif %}
     <li>
-        <a href="../..">Back to Hub List</a>
+        <a href="{{ html_root }}">Back to Hub List</a>
     </li>
 </ul>
 {% endblock %}
