--- a/templates/pair.html
+++ b/templates/pair.html
@@ -21,7 +21,7 @@ Then press the pair button below.
 </p>
 <ul>
     <li>
-        <a href="../..">Back to Hub List</a>
+        <a href="{{ html_root }}">Back to Hub List</a>
     </li>
 </ul>
 {% endblock %}
