--- a/templates/success.html
+++ b/templates/success.html
@@ -11,7 +11,7 @@ this computer.
 </p>
 <ul>
     <li>
-        <a href="../..">Back to Hub List</a>
+        <a href="{{ html_root }}">Back to Hub List</a>
     </li>
 </ul>
 {% endblock %}
